--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
           "default": true,
           "description": "Enable/disable haml-lint"
         },
+        "hamlAll.simpleAutoFixOnSave": {
+          "type": "boolean",
+          "default": true,
+          "description": "Only removes trailing whitespace an adds a newline at the end of the file."
+        },
         "hamlAll.linterExecutablePath": {
           "type": "string",
           "default": "haml-lint",
