refactor: Events  Watchers

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "snippets"
   ],
   "license": "MIT",
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:ruby"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "configuration": {
