feat: update description for formatOnSave option to indicate experimental status

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "hamlAll.formatOnSave": {
           "type": "boolean",
           "default": false,
-          "description": "Format HAML files on save"
+          "description": "Format HAML files on save (Experimental)"
         }
       }
     },
