--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
         },
         "hamlAll.formatOnSave": {
           "type": "boolean",
-          "default": false,
+          "default": true,
           "description": "Format HAML files on save (Experimental)"
         }
       }
