--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haml-all",
   "displayName": "HAML - All in One",
-  "description": "Provides all the necessary tools to work with HAML",
+  "description": "Including syntax highlighting, linting, formatting, and additional features.",
   "icon": "images/icon.png",
   "galleryBanner": {
     "color": "#EAEAE1",
