refactor: harmonize string literal styles and improve formatting in configuration and test files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,7 +6,7 @@ AllCops:
 
 Style/FrozenStringLiteralComment:
   Enabled: true
-  EnforcedStyle: always
+  SafeAutoCorrect: true
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
