feat: add "Wrap in Conditional" code action for HAML content

--- a/package.json
+++ b/package.json
@@ -85,6 +85,11 @@
         "command": "hamlAll.livePreview",
         "title": "HAML: Open Live Preview",
         "enablement": "editorLangId == haml"
+      },
+      {
+        "command": "hamlAll.wrapInConditional",
+        "title": "HAML: Wrap in conditional",
+        "enablement": "editorLangId == haml"
       }
     ],
     "languages": [
