Add **Wrap in a Ruby Block**: New Code Action to wrap selected HAML content in Ruby blocks

--- a/package.json
+++ b/package.json
@@ -90,6 +90,11 @@
         "command": "hamlAll.wrapInConditional",
         "title": "HAML: Wrap in conditional",
         "enablement": "editorLangId == haml"
+      },
+      {
+        "command": "hamlAll.wrapInBlock",
+        "title": "HAML: Wrap in a ruby block",
+        "enablement": "editorLangId == haml"
       }
     ],
     "languages": [
