--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,10 @@
   // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
   "typescript.tsc.autoDetect": "off",
   "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": "always"
     }
-  },
-  "cSpell.words": ["Autocorrect", "cdata", "stylesheet"]
+  }
 }
