--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,6 @@
   "printWidth": 130,
   "tabWidth": 2,
   "useTabs": false,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "endOfLine": "lf"
 }
