feat: add Ruby snippets for RSpec and Minitest to enhance testing support

--- a/package.json
+++ b/package.json
@@ -136,6 +136,10 @@
       {
         "language": "haml",
         "path": "./snippets/rails-snippets.json"
+      },
+      {
+        "language": "ruby",
+        "path": "./snippets/test-snippets.json"
       }
     ]
   },
